flux/apps/backend-services/slackbot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    external-dns.alpha.kubernetes.io/hostname: slack.${subdomain}.${domain}.
    nginx.ingress.kubernetes.io/client-body-buffer-size: 100m
    nginx.ingress.kubernetes.io/proxy-body-size: 12m
  name: slackbot
  namespace: backend-services
spec:
  ingressClassName: "ingress-nginx"
  rules:
  - host: slack.${subdomain}.${domain}
    http:
      paths:
      - backend:
          service:
            name: slackbot
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - slack.${subdomain}.${domain}
    secretName: slackbot-tls
